@@ -69,7 +69,7 @@ static const char *const program_license =
   "\n"
   "You should have received a copy of the GNU General Public License "
   "along with regexxer; if not, write to the Free Software Foundation, "
-  "Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA";
+  "Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA\n";
 
 class FileErrorDialog : public Gtk::MessageDialog
 {
